# cellpath

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DATA.md  Dockerfile.cpu  Dockerfile.cuda  EXPERIMENTS.md  Makefile  P0C0_REACHABILITY_PLAN.md  PHASES.md  PROGRESS.md  README.md  V2_RESEARCH_PLAN.md  V2_STRATEGY_REASSESSMENT_PLAN.md  V3A_LATENT_AUDIT_AND_64D_PLAN.md  docker-compose.yml  pyproject.toml  requirements.txt
artifacts_proposal1/: aggregate.py  run_proposal1.sh
artifacts_proposal1/diagnostics/: 00_baselines_existing.json
artifacts_proposal1/dynamics_soft_ot_ror/: checkpoint_comparison.json  config.json  epoch_metrics.json  gate.json  gate_diagnostics.json  model_best_gate.pt  model_best_nll.pt  ood_metrics.json  ridge_baseline.npz  val_metrics.json
artifacts_proposal1/dynamics_v1ot_ror/: checkpoint_comparison.json  config.json  epoch_metrics.json  gate.json  gate_diagnostics.json  model.pt  model_best_nll.pt  ood_metrics.json  ridge_baseline.npz  (+1 more)
artifacts_proposal2/: eval_minimal.py
artifacts_v2/: V2_FINAL_REPORT.md  interpretation_hard_bench_soft_ot.md  interpretation_p0b2_mean_delta_corr.md  interpretation_p0b_doubleprime.md  interpretation_p0b_prime.md  interpretation_p0c0_reachability.md  interpretation_p0d_v1ot_hardening.md  interpretation_p0e_v1ot_hardening.md  interpretation_p0f_wrapup.md  p0a_decision.md  p0a_summary.md
config/: default.yaml  dynamics.yaml  paths.yaml  rl.yaml  rl_hard.yaml  vae.yaml
docs/: proposal1_results.md  proposal2_results.md  vae_retrain_diagnostic_report.md
notebooks/: 01_data_exploration.ipynb  02_vae_latent_inspection.ipynb  03_rl_trajectory_viz.ipynb
scripts/: aggregate_eval.py  aggregate_v2_seeds.py  aggregate_v3b_phase2c.py  aggregate_v3b_phase3.py  aggregate_v3b_phase3b.py  aggregate_v3b_phase4.py  aggregate_v3c_utility_audit.py  audit_dynamics_utility_v3c.py  audit_ensemble_disagreement.py  audit_v3c_replogle_heldout.py  build_pairs.py  build_v3b_biology_layer.py  compare_p0e_matrix.py  compare_pairings.py  diagnose_action_contraction.py  diagnose_dynamics_contraction.py  diagnose_pairing_noise.py  download_data.sh  download_replogle_heldout.py  evaluate.py  evaluate_baselines_only.py  evaluate_biology_v2.py  evaluate_rl.py  evaluate_rl_hard.py  evaluate_rl_v3b.py  evaluate_rl_v3b_phase3.py  evaluate_rl_v3b_phase4.py  generate_v3c_figures.py  inventory_dynamics_v3c.py  make_v2_figures.py  plot_rl_trajectories_umap.py  posthoc_score_paths.py  probe_reachability.py  run_dynamics_ablation.py  run_final_v3c_pipeline.py  run_random_policy.py  setup_env.sh  summarize_rl_run.py  train_dynamics.py  train_rl.py  (+3 more)
src/: __init__.py  pipeline.py
tests/: conftest.py  test_aggregate.py  test_analysis.py  test_baselines_multistep.py  test_biology_rewards.py  test_contraction_diagnostic.py  test_curriculum.py  test_data.py  test_depmap_compare.py  test_dynamics.py  test_dynamics_contraction_aware.py  test_dynamics_utility.py  test_environment.py  test_final_champion_manifest.py  test_freeband_reward.py  test_fused_rewards.py  test_integration.py  test_metrics.py  test_model_selection.py  test_p0a_biology.py  test_p0a_epsilon.py  test_p0a_gate_breakdown.py  test_p0a_pairing_noise.py  test_p0a_rl_hard.py  test_p0b_doubleprime_pairing.py  test_p0b_prime_pairing.py  test_path_feasibility.py  test_reward.py  test_rl.py  test_rl_eval_infra.py  test_utils.py  test_v2_figures.py
(+133 files in other folders)
